--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  margin-left: 43%;
+  margin-right: 22%;
+  width: 300px;
+  background-image: linear-gradient(#5394b7, #234B90);
   color: white;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+  box-shadow: 0px 10px 15px 5px rgba(0,0,0,0.55);
 }
 
-.App-link {
-  color: #61dafb;
+.number {
+  font-size: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+select {
+  width: 50%;
+  border: none;
+  border-radius: 4px;
+  color: rgb(255, 255, 255);
+  background-color: #5394b7;
+  height: 30px;
+  line-height: 30px;
+}
+
+svg {
+  width: 50px;
+  height: 50px;
+  fill: white;
+}
+
+.act_temp {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.city {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.min_max_temp {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.precipitation {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.humidity {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.wind {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
